--- a/Projet_NUM(1).ipynb
+++ b/Projet_NUM(1).ipynb
@@ -736,11 +736,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "## Partie 2 "
+      ]
     }
   ],
   "metadata": {
